# otus-cpp-hw-08

./: CMakeLists.txt  README.md
.github/workflows/: release.yaml
src/: CMakeLists.txt  ConversionUtil.cpp  ConversionUtil.h  DirectoryScanner.cpp  DirectoryScanner.h  File.cpp  File.h  FileComparer.cpp  FileComparer.h  FileImpl.cpp  FileImpl.h  HashAlgorithmType.h  Hasher.h  HasherFactory.cpp  HasherFactory.h  ProgramOptions.cpp  ProgramOptions.h  StringMatcher.cpp  StringMatcher.h  Util.cpp  Util.h  main.cpp
test/: CMakeLists.txt  ConversionUtilTest.cpp  DirectoryScannerTest.cpp  FileComparerTest.cpp  StringMatcherTest.cpp  UtilTest.cpp
test/test-data/directory-scanner-test/min-file-size-test/: big-file-1.txt
